Add Ruff settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,16 @@ project = "labyrinth_game.main:main"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+exclude = ["venv", ".venv", "dist", "__pycache__", "constants.py"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
+[dependency-groups]
+dev = [
+    "ruff (>=0.14.0,<0.15.0)"
+]
