--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
 name = "project1-zhabinskaya-victoria-m25-555"
 version = "0.1.0"
-description = ""
+description = "Игра-лабиринт (labyrinth game)" 
 authors = ["Victoria Zhabinskaya <zhabinskayavictoria@yandex.ru>"]
 readme = "README.md"
-
 packages = [
     { include = "labyrinth_game" }
 ]
@@ -27,7 +26,6 @@ exclude = ["venv", ".venv", "dist", "__pycache__", "constants.py"]
 [tool.ruff.lint]
 select = ["E", "F", "I"]
 ignore = []
-[dependency-groups]
-dev = [
-    "ruff (>=0.14.0,<0.15.0)"
-]
+
+[tool.poetry.group.dev.dependencies]
+ruff = ">=0.14.0,<0.15.0"
